[package]
name = "auths-pairing-protocol"
version.workspace = true
edition = "2024"
publish = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport-agnostic pairing protocol for auths identity system"
keywords = ["pairing", "identity", "x25519", "ecdh", "protocol"]
categories = ["cryptography"]

[dependencies]
auths-crypto = { workspace = true, features = ["native"] }
auths-keri.workspace = true
ring.workspace = true
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8"] }
rand = "0.8"
base64.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.8.1", features = ["serde", "derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror.workspace = true
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
schemars = { version = "0.8", optional = true }

[features]
default = []
schema = ["dep:schemars"]

[dev-dependencies]
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
regex-lite = "0.1"

[lints]
workspace = true
