[package]
name = "auths-policy"
version.workspace = true
edition = "2024"
description = "Policy expression engine for Auths - composable authorization logic"
publish = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["authorization", "policy", "permissions", "access-control"]
categories = ["authentication"]

[dependencies]
auths-verifier.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"

[lints]
workspace = true

[dev-dependencies]
