[package]
name = "auths-radicle"
version.workspace = true
edition = "2024"
authors = ["bordumb <bordumbb@gmail.com>"]
description = "Radicle protocol integration for Auths - identity resolution and policy bridge"
publish = true
license.workspace = true
repository = "https://github.com/auths-dev/auths"
readme = "README.md"
keywords = ["radicle", "identity", "did", "git", "cryptography"]
categories = ["cryptography", "authentication"]

[features]
default = ["std"]
std = [
    "dep:chrono",
    "dep:git2",
    "dep:auths-id",
    "dep:auths-crypto",
    "dep:ring",
    "auths-verifier/native",
]
wasm = ["dep:wasm-bindgen", "auths-verifier/wasm"]

[dependencies]
# WASM-safe: always available
auths-verifier = { workspace = true, default-features = false }
bs58 = "0.5.1"
json-canon = "0.1"
# NOTE: we use local paths here as this requires using local, development branches of these crates.
radicle-core = { path = "../../../../radicle-base/heartwood/crates/radicle-core", features = ["serde"] }
radicle-crypto = { path = "../../../../radicle-base/heartwood/crates/radicle-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true

# std-only: git storage, crypto verification, time
auths-crypto = { workspace = true, optional = true }
auths-id = { workspace = true, optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
git2 = { version = "0.20.4", optional = true }
ring = { workspace = true, optional = true }

# WASM-only
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
auths-id.workspace = true
auths-crypto.workspace = true
chrono = { version = "0.4", features = ["serde"] }
ring.workspace = true
tempfile = "3.19.1"
